# tui-master-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SUBMISSION.md  pyproject.toml  tui_master.py
.github/workflows/: ci.yml
assets/before/: SNAPSHOT.md
ci/: ci.yml
engagement/: dev-progress-comment.md  maintainer-comments.md  reddit-commandline.md  reddit-golang.md  reddit-python.md  x-thread.md
examples/: README.md
examples/bubbletea/: go.mod  main.go
examples/rich/: main.py
examples/textual/: main.py
skills/tui-builder/: SKILL.md
skills/tui-builder/frameworks/: bubbletea.md  cursive.md  ink.md  ratatui.md  rich.md  textual.md
skills/tui-builder/patterns/: async-events.md  keybindings.md  modals.md  tables.md  tabs.md
skills/tui-builder/quality-bar/: awesome-tuis-checklist.md
skills/tui-builder/termux/: compatibility-matrix.md  conversion-recipes.md
tests/: test_tui_master.py
