[project]
name = "tui-master-agent"
version = "0.2.0"
description = "Single-agent generator that studies a real GitHub TUI repo and produces a small inspired TUI in the same framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "devilinspace" }]
dependencies = [
    "anthropic>=0.49",
    "pydantic>=2.6",
    "rich>=13.7",
    "textual>=0.60",
]

[project.scripts]
tui-master = "tui_master:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["tui_master.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = false
warn_redundant_casts = true
ignore_missing_imports = true
files = ["tui_master.py", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
